update changelog to reflect all changes